# big-mocha

./: CMakeLists.txt  Makefile  README.md  glad.c  main.c++  main.cpp
assets/shaders/: 2D.vs  default.vs
include/glad/: glad.c  glad.h
include/mocha/ecs/: ecs.hpp  entity.hpp  systems.hpp
include/mocha/graphics/: camera.hpp  drawables.hpp  render.hpp
include/mocha/helper/: event.hpp  log.hpp  resource.hpp
include/mocha/window/: window.hpp
media/shaders/: default.fs  default.vs
src/: CMakeLists.txt  glad.c  main.cpp  render.c++  render.hpp  resource.c++
src/ecs/: CMakeLists.txt  ecs.cpp
src/graphics/: CMakeLists.txt  camera.cpp  drawables.cpp  glad.cpp  render.cpp
src/helper/: CMakeLists.txt  event.cpp  log.cpp  resource.cpp
src/modules/: module.cpp  module.hpp
src/modules/component/: component.hpp  graphic_c.hpp
src/modules/entity/: entity.cpp  entity.hpp
src/modules/event/: event.cpp  event.hpp  observer.hpp  subject.cpp  subject.hpp
src/modules/glad/: glad.c
src/modules/graphics/: body2d.cpp  body2d.hpp  body3d.cpp  body3d.hpp  camera.cpp  camera.hpp  cuboid.hpp  drawable.hpp  font.cpp  font.hpp  graphics.cpp  graphics.hpp  gtypes.cpp  gtypes.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  rectangle.cpp  rectangle.hpp  shader.cpp  shader.hpp
src/modules/input/: command.hpp  inputhandler.cpp  inputhandler.hpp
src/window/: CMakeLists.txt  window.cpp
stached modules/component/: component.hpp  graphic_c.hpp
stached modules/entity/: entity.cpp  entity.hpp  ui.hpp
stached modules/input/: command.hpp  inputhandler.cpp
(+8 files in other folders)
